[project]
name = "plots"
version = "0.1.0"
description = "General plotting utils."
authors = [
    {name = "TLouf", email = "tlouf+pro@pm.me"},
]
dependencies = [
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
plotly = [
    "plotly>=5.20.0",
]
geo = [
    "geo @ git+https://github.com/TLouf/geo.git@main",
]
hvplot = [
    "hvplot>=0.9.2",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
